[package]
name = "rust_go_benchmark"
version = "0.1.0"
authors = ["busyluo <2488091@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#criterion = "0.3.1"
#
#
#[[bench]]
#name = "map_benchmark"
#harness = false